fixed broken css

--- a/css/map.css
+++ b/css/map.css
@@ -25,7 +25,7 @@
 	margin-top: 10px;
 }
 
-.full-width .active-filters li {
+.active-filters li {
 	list-style: none;
 	display: inline-block;
 	margin-right: 10px;
@@ -37,7 +37,7 @@
 	margin-bottom: 10px
 }
 
-.full-width .active-filters {
+.active-filters {
 	display: inline;
 	padding-left: 0;
 }
@@ -233,18 +233,8 @@ a.hide-text:hover {
 	color: #333;
 }
 
-.content-full-width ul {
+.text-ul {
 	list-style: url(../../../images/content-right-bullet.gif);
 	margin-left: 10px;
 	padding-left: 5px;
-}
-
-ul.dropdown-menu {
-	list-style: none;
-	margin-left: 0;
-	padding-left: 0;
-}
-
-ul.dropdown-menu li {
-	margin: 0;
 }
